---
source: crates/squawk_linter/src/rules/prefer_robust_stmts.rs
expression: "lint_errors(r#\"\nselect 1; -- so we don't skip checking\nCREATE INDEX CONCURRENTLY \"core_foo_idx\" ON \"core_foo\" (\"answer_id\");\n        \"#)"
---
warning[prefer-robust-stmts]: Missing `IF NOT EXISTS`, the migration can't be rerun if it fails part way through.
  ╭▸ 
3 │ CREATE INDEX CONCURRENTLY "core_foo_idx" ON "core_foo" ("answer_id");
  │ ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
  │
  ├ help: Use an explicit name for a concurrently created index
  ╭╴
3 │ CREATE INDEX CONCURRENTLY if not exists "core_foo_idx" ON "core_foo" ("answer_id");
  ╰╴                          +++++++++++++
